# dkp

./: .gitignore  Dockerfile  README.md  TODO.md  config.yml  docker-compose.yml  pyproject.toml  requirements-dev.in  requirements.in  requirements.txt
data/: application.yml  balance_fallback.csv  config.yml  player.json  raid.json  season.json  shared-local-instance.db  statistics-dummy.json
data/example/: wcl-player_details.json  wcl-rate-limits.json  wcl-report-debug.json  wcl-report.json  wcl-zones.json
data/season/dfs3/: 02.json  2023-11-15-no-export.json  2023-11-15.json  2023-11-19-no-export.json  2023-11-19.json  2023-11-26.json  2023-11-29-fix.json  2023-11-29.json  2023-12-03.json  2023-12-13.json  2023-12-17.json  2023-12-20.json  2023-12-27.json  2024-01-03.json  2024-01-07.json  2024-01-10.json  2024-01-14.json  2024-01-17.json  2024-01-21.json  2024-01-24.json  2024-01-28.json  2024-01-31.json  2024-02-07.json  2024-02-18.json  2024-02-21.json  2024-02-28.json  2024-03-10.json  2024-03-17.json  2024-03-24-fix.json  2024-03-24.json  2024-04-06.json  2024-04-12.json  2030-01-01.json  2030-01-02.json
data/season/dfs4/: 2040-01-01.json
experimental/: aws_dynamodb_example.py  aws_dynamodb_example_localhost.py
frontend/: 01_overview.py
frontend/pages/: 02_admin.py
src/dkp/: 01_Guthaben.py  01_overview.py  __init__.py  app.py  config_mapper.py  core.py  data_classes.py  dkp_app.py  github_client.py  warcraftlogs_client.py
test/: test_app.py  test_dkp_app.py
tests/: commons.py  test_app.py  test_core.py  test_dkp_app.py  test_github_client.py
(+15 files in other folders)
