[tool.pytest.ini_options]
pythonpath = "src/dkp"
addopts = [
    "--import-mode=importlib",
]

[tool.black]
line-length = 140

[tool.isort]
line_length = 100

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dkp"
version = "1.0.1"
requires-python = ">= 3.12"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }
optional-dependencies.dev = { file = ["requirements-dev.in"] }
